--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="panel-body">
                 <div class="text-right">
-                    <button type="button" class="btn btn-info">新增用户</button>
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#newUserModal">新增用户</button>
                 </div>
                 <form class="form-inline" role="form">
                     <div class="form-group">
@@ -140,7 +140,7 @@
             </div>
             <div class="panel-body">
                 <div class="text-right">
-                    <button type="button" class="btn btn-info">新增项目</button>
+                    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#newProjectModal">新增项目</button>
                 </div>
                 <form class="form-inline" role="form">
                     <div class="form-group">
@@ -274,7 +274,93 @@
         </div>
     </div>
 </footer>
+<!-- 新增用户模态框（Modal） -->
+<div class="modal fade" id="newUserModal" tabindex="-1" role="dialog" aria-labelledby="newUserModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×
+                </button>
+                <h4 class="modal-title" id="newUserModalLabel">
+                    新增用户
+                </h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal" id="newUserForm" role="form">
+                    <div class="form-group">
+                        <label for="usName" class="col-sm-3 control-label">英文名称：</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="usName" name="usName"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="cnName" class="col-sm-3 control-label">中文名称：</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="cnName" name="cnName"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="userRole" class="col-sm-3 control-label">用户角色：</label>
+                        <div class="col-sm-9">
+                            <select id="userRole" name="userRole" class="form-control">
+                                <option>系统管理员</option>
+                                <option>开发人员</option>
+                                <option>测试人员</option>
+                                <option>运维人员</option>
+                                <option>产品人员</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="cellPhone" class="col-sm-3 control-label">手机号码：</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="cellPhone" name="cellPhone"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-3 control-label">工作邮箱：</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="email" name="email"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    关闭
+                </button>
+                <button type="button" class="btn btn-primary">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
-
+<!-- 新增项目模态框（Modal） -->
+<div class="modal fade" id="newProjectModal" tabindex="-1" role="dialog" aria-labelledby="newProjectModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×
+                </button>
+                <h4 class="modal-title" id="newProjectModalLabel">
+                    新增项目
+                </h4>
+            </div>
+            <div class="modal-body">
+                点击关闭按钮检查事件功能。
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    关闭
+                </button>
+                <button type="button" class="btn btn-primary">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 </body>
 </html>
