--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -180,6 +180,7 @@
                         <td class="text-center">
                             <button type="button" class="btn btn-success btn-xs">编辑</button>
                             <button type="button" class="btn btn-danger btn-xs">删除</button>
+                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
                             <button type="button" class="btn btn-info btn-xs">接口管理</button>
                         </td>
                     </tr>
@@ -194,6 +195,7 @@
                         <td class="text-center">
                             <button type="button" class="btn btn-success btn-xs">编辑</button>
                             <button type="button" class="btn btn-danger btn-xs">删除</button>
+                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
                             <button type="button" class="btn btn-info btn-xs">接口管理</button>
                         </td>
                     </tr>
@@ -208,6 +210,7 @@
                         <td class="text-center">
                             <button type="button" class="btn btn-success btn-xs">编辑</button>
                             <button type="button" class="btn btn-danger btn-xs">删除</button>
+                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
                             <button type="button" class="btn btn-info btn-xs">接口管理</button>
                         </td>
                     </tr>
@@ -222,6 +225,7 @@
                         <td class="text-center">
                             <button type="button" class="btn btn-success btn-xs">编辑</button>
                             <button type="button" class="btn btn-danger btn-xs">删除</button>
+                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
                             <button type="button" class="btn btn-info btn-xs">接口管理</button>
                         </td>
                     </tr>
@@ -236,6 +240,7 @@
                         <td class="text-center">
                             <button type="button" class="btn btn-success btn-xs">编辑</button>
                             <button type="button" class="btn btn-danger btn-xs">删除</button>
+                            <button type="button" class="btn btn-warning btn-xs">应用管理</button>
                             <button type="button" class="btn btn-info btn-xs">接口管理</button>
                         </td>
                     </tr>
