api接口文档管理系统设计文档

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -313,11 +313,11 @@
                         <label for="userRoleInput" class="col-sm-3 control-label">用户角色：</label>
                         <div class="col-sm-9">
                             <select id="userRoleInput" name="userRoleInput" class="form-control">
-                                <option>系统管理员</option>
-                                <option>开发人员</option>
-                                <option>测试人员</option>
-                                <option>运维人员</option>
-                                <option>产品人员</option>
+                                <option value="1">系统管理员</option>
+                                <option value="2">开发人员</option>
+                                <option value="3">测试人员</option>
+                                <option value="4">运维人员</option>
+                                <option value="5">产品人员</option>
                             </select>
                         </div>
                     </div>
