api接口文档管理系统设计文档

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,9 @@
             $("#newUserSubmitBtn").click(function () {
                 $.post("apiUser/insertApiUser", $("#newUserForm").serialize(), function (data) {
                     console.log(data);
+                    if (data.success) {
+                        $("#newUserModal").modal("hide");
+                    }
                 }, "json");
             });
         });
