--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,14 @@
     <script src="webFrame/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
     <script>
         $(function () {
+
+            //用户角色枚举
+            $.get("enum/userRoleEnums", null, function (data) {
+                for (var code in data) {
+                    $("#userRoleInput").append("<option value='" + code + "'>" + data[code] + "</option>");
+                }
+            }, "json");
+
             //新增用户提交按钮
             $("#newUserSubmitBtn").click(function () {
                 $.post("apiUser/insertApiUser", $("#newUserForm").serialize(), function (data) {
@@ -324,11 +332,11 @@
                         <label for="userRoleInput" class="col-sm-3 control-label">用户角色：</label>
                         <div class="col-sm-9">
                             <select id="userRoleInput" name="userRoleInput" class="form-control">
-                                <option value="1">系统管理员</option>
-                                <option value="2">开发人员</option>
-                                <option value="3">测试人员</option>
-                                <option value="4">运维人员</option>
-                                <option value="5">产品人员</option>
+                                <!--<option value="1">系统管理员</option>-->
+                                <!--<option value="2">开发人员</option>-->
+                                <!--<option value="3">测试人员</option>-->
+                                <!--<option value="4">运维人员</option>-->
+                                <!--<option value="5">产品人员</option>-->
                             </select>
                         </div>
                     </div>
