--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,17 +17,43 @@
             }, "json");
 
             //用户列表
-            $.get("apiUser/findApiUserList", null, function (data) {
-                if (data != null && data.length > 0) {
+            /*
+             $.get("apiUser/findApiUserList", null, function (data) {
+             if (data != null && data.length > 0) {
+             var trElements = "";
+             for (var i = 0; i < data.length; i++) {
+             var trElement = "<tr>";
+             trElement += ("<td class='text-center'>" + data[i].userId + "</td>");
+             trElement += ("<td class='text-center'>" + data[i].usName + "</td>");
+             trElement += ("<td class='text-center' >" + data[i].cnName + "</td>");
+             trElement += ("<td class='text-center'>" + data[i].userRoleText + "</td>");
+             trElement += ("<td class='text-center'>" + data[i].cellPhone + "</td>");
+             trElement += ("<td class='text-center'>" + data[i].email + "</td>");
+             trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\">编辑</button>"
+             + "&nbsp;&nbsp;&nbsp;&nbsp;" +
+             "<button class=\"btn btn-danger btn-xs\">删除</button>" + "</td>");
+             trElement += "</tr>";
+             trElements = trElements + trElement;
+             }
+             $("#userTableTBody").html(trElements);
+             } else {
+             $("#userTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
+             }
+             }, "json");
+             */
+
+            //用户分页
+            $.get("apiUser/findApiUserPage", null, function (data) {
+                if (data != null && data.rows != null && data.rows.length > 0) {
                     var trElements = "";
-                    for (var i = 0; i < data.length; i++) {
+                    for (var i = 0; i < data.rows.length; i++) {
                         var trElement = "<tr>";
-                        trElement += ("<td class='text-center'>" + data[i].userId + "</td>");
-                        trElement += ("<td class='text-center'>" + data[i].usName + "</td>");
-                        trElement += ("<td class='text-center' >" + data[i].cnName + "</td>");
-                        trElement += ("<td class='text-center'>" + data[i].userRoleText + "</td>");
-                        trElement += ("<td class='text-center'>" + data[i].cellPhone + "</td>");
-                        trElement += ("<td class='text-center'>" + data[i].email + "</td>");
+                        trElement += ("<td class='text-center'>" + data.rows[i].userId + "</td>");
+                        trElement += ("<td class='text-center'>" + data.rows[i].usName + "</td>");
+                        trElement += ("<td class='text-center' >" + data.rows[i].cnName + "</td>");
+                        trElement += ("<td class='text-center'>" + data.rows[i].userRoleText + "</td>");
+                        trElement += ("<td class='text-center'>" + data.rows[i].cellPhone + "</td>");
+                        trElement += ("<td class='text-center'>" + data.rows[i].email + "</td>");
                         trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\">编辑</button>"
                         + "&nbsp;&nbsp;&nbsp;&nbsp;" +
                         "<button class=\"btn btn-danger btn-xs\">删除</button>" + "</td>");
