--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
     <script>
         $(function () {
 
-            //分页控制
+            //分页控制函数
             function pagerControl(data) {
                 var previous = $("#userManagerPanel").find("ul.pager > li.previous > a");
                 var next = $("#userManagerPanel").find("ul.pager > li.next > a");
@@ -27,6 +27,47 @@
                     $("#userManagerPanel").find("ul.pager > li.next").removeClass("disabled");
                 }
             }
+
+            //用户分页函数
+            function userPage(currentPage, pageSize) {
+                $.get("apiUser/findApiUserPage", {currentPage:currentPage, pageSize: pageSize}, function (data) {
+                    if (data != null && data.rows != null && data.rows.length > 0) {
+                        var trElements = "";
+                        for (var i = 0; i < data.rows.length; i++) {
+                            var trElement = "<tr>";
+                            trElement += ("<td class='text-center'>" + data.rows[i].userId + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].usName + "</td>");
+                            trElement += ("<td class='text-center' >" + data.rows[i].cnName + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].userRoleText + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].cellPhone + "</td>");
+                            trElement += ("<td class='text-center'>" + data.rows[i].email + "</td>");
+                            trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\">编辑</button>"
+                            + "&nbsp;&nbsp;&nbsp;&nbsp;" +
+                            "<button class=\"btn btn-danger btn-xs\">删除</button>" + "</td>");
+                            trElement += "</tr>";
+                            trElements = trElements + trElement;
+                        }
+                        $("#userTableTBody").html(trElements);
+                    } else {
+                        $("#userTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
+                    }
+                    pagerControl(data);
+                }, "json");
+            }
+
+            //用户上一页单击事件
+            $("#userManagerPanel").delegate("ul.pager > li.previous > a", "click", function () {
+               if (!$("#userManagerPanel").find("ul.pager > li.previous").hasClass("disabled")) {
+                   userPage(parseInt($("#userManagerPanel").find("ul.pager > li.previous > a").attr("data-page"))-1,null);
+               }
+            });
+
+            //用户下一页单击事件
+            $("#userManagerPanel").delegate("ul.pager > li.next > a", "click", function () {
+                if (!$("#userManagerPanel").find("ul.pager > li.next").hasClass("disabled")) {
+                    userPage(parseInt($("#userManagerPanel").find("ul.pager > li.next > a").attr("data-page"))+1,null);
+                }
+            });
 
             //用户角色枚举
             $.get("enum/userRoleEnums", null, function (data) {
@@ -62,29 +103,7 @@
              */
 
             //用户分页
-            $.get("apiUser/findApiUserPage", null, function (data) {
-                if (data != null && data.rows != null && data.rows.length > 0) {
-                    var trElements = "";
-                    for (var i = 0; i < data.rows.length; i++) {
-                        var trElement = "<tr>";
-                        trElement += ("<td class='text-center'>" + data.rows[i].userId + "</td>");
-                        trElement += ("<td class='text-center'>" + data.rows[i].usName + "</td>");
-                        trElement += ("<td class='text-center' >" + data.rows[i].cnName + "</td>");
-                        trElement += ("<td class='text-center'>" + data.rows[i].userRoleText + "</td>");
-                        trElement += ("<td class='text-center'>" + data.rows[i].cellPhone + "</td>");
-                        trElement += ("<td class='text-center'>" + data.rows[i].email + "</td>");
-                        trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\">编辑</button>"
-                        + "&nbsp;&nbsp;&nbsp;&nbsp;" +
-                        "<button class=\"btn btn-danger btn-xs\">删除</button>" + "</td>");
-                        trElement += "</tr>";
-                        trElements = trElements + trElement;
-                    }
-                    $("#userTableTBody").html(trElements);
-                } else {
-                    $("#userTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
-                }
-                pagerControl(data);
-            }, "json");
+            userPage(null, null);
 
             //新增用户提交按钮
             $("#newUserSubmitBtn").click(function () {
