api接口管理平台开发

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -155,12 +155,12 @@
                 </div>
                 <form class="form-inline" role="form">
                     <div class="form-group">
-                        <label class="control-label" for="name">中英文名称：</label>
-                        <input type="text" class="form-control" id="name">
+                        <label class="control-label" for="userNameCondition">中英文名称：</label>
+                        <input type="text" class="form-control" id="userNameCondition">
                     </div>
                     <div class="form-group">
-                        <label class="control-label" for="contactWay">手机号码/邮箱：</label>
-                        <input type="text" class="form-control" id="contactWay">
+                        <label class="control-label" for="contactWayCondition">手机号码/邮箱：</label>
+                        <input type="text" class="form-control" id="contactWayCondition">
                     </div>
                     <button type="button" class="btn btn-primary">搜索</button>
                 </form>
