--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,29 +10,31 @@
         $(function () {
 
             //分页控制函数
-            function pagerControl(data) {
-                var previous = $("#userManagerPanel").find("ul.pager > li.previous > a");
-                var next = $("#userManagerPanel").find("ul.pager > li.next > a");
+            function pagerControl($managerPanel, data) {
+                var previous = $managerPanel.find("ul.pager > li.previous > a");
+                var next = $managerPanel.find("ul.pager > li.next > a");
                 previous.attr("data-page", data.page).attr("data-total", data.total);
                 next.attr("data-page", data.page).attr("data-total", data.total);
                 if (previous.attr("data-page") == 1) {
-                    $("#userManagerPanel").find("ul.pager > li.previous").addClass("disabled");
+                    $managerPanel.find("ul.pager > li.previous").addClass("disabled");
                 } else {
-                    $("#userManagerPanel").find("ul.pager > li.previous").removeClass("disabled");
+                    $managerPanel.find("ul.pager > li.previous").removeClass("disabled");
                 }
 
                 if (next.attr("data-page") == next.attr("data-total")) {
-                    $("#userManagerPanel").find("ul.pager > li.next").addClass("disabled");
+                    $managerPanel.find("ul.pager > li.next").addClass("disabled");
                 } else {
-                    $("#userManagerPanel").find("ul.pager > li.next").removeClass("disabled");
+                    $managerPanel.find("ul.pager > li.next").removeClass("disabled");
                 }
             }
 
             //用户分页函数
             function userPage(currentPage, pageSize) {
-                $.get("apiUser/findApiUserPage", {currentPage:currentPage, pageSize: pageSize,
-                    userNameCondition:$("#userNameCondition").val(),
-                    contactWayCondition: $("#contactWayCondition").val()}, function (data) {
+                $.get("apiUser/findApiUserPage", {
+                    currentPage: currentPage, pageSize: pageSize,
+                    userNameCondition: $("#userNameCondition").val(),
+                    contactWayCondition: $("#contactWayCondition").val()
+                }, function (data) {
                     if (data != null && data.rows != null && data.rows.length > 0) {
                         var trElements = "";
                         for (var i = 0; i < data.rows.length; i++) {
@@ -53,7 +55,7 @@
                     } else {
                         $("#userTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
                     }
-                    pagerControl(data);
+                    pagerControl($("#userManagerPanel"), data);
                 }, "json");
             }
 
@@ -64,15 +66,15 @@
 
             //用户上一页单击事件
             $("#userManagerPanel").delegate("ul.pager > li.previous > a", "click", function () {
-               if (!$("#userManagerPanel").find("ul.pager > li.previous").hasClass("disabled")) {
-                   userPage(parseInt($("#userManagerPanel").find("ul.pager > li.previous > a").attr("data-page"))-1,null);
-               }
+                if (!$("#userManagerPanel").find("ul.pager > li.previous").hasClass("disabled")) {
+                    userPage(parseInt($("#userManagerPanel").find("ul.pager > li.previous > a").attr("data-page")) - 1, null);
+                }
             });
 
             //用户下一页单击事件
             $("#userManagerPanel").delegate("ul.pager > li.next > a", "click", function () {
                 if (!$("#userManagerPanel").find("ul.pager > li.next").hasClass("disabled")) {
-                    userPage(parseInt($("#userManagerPanel").find("ul.pager > li.next > a").attr("data-page"))+1,null);
+                    userPage(parseInt($("#userManagerPanel").find("ul.pager > li.next > a").attr("data-page")) + 1, null);
                 }
             });
 
