--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -47,7 +47,8 @@
                             trElement += ("<td class='text-center'>" + data.rows[i].email + "</td>");
                             trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\">编辑</button>"
                             + "&nbsp;&nbsp;&nbsp;&nbsp;" +
-                            "<button class=\"btn btn-danger btn-xs\">删除</button>" + "</td>");
+                            "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
+                            "data-target=\"#deleteUserModal\" data-userid='" + data.rows[i].userId + "'>删除</button>" + "</td>");
                             trElement += "</tr>";
                             trElements = trElements + trElement;
                         }
@@ -120,6 +121,21 @@
                     console.log(data);
                     if (data.success) {
                         $("#newUserModal").modal("hide");
+                        window.location.reload();
+                    }
+                }, "json");
+            });
+
+            //删除用户提交按钮
+            $("#userTableTBody").delegate("button.btn-danger", "click", function () {
+                var userId = $(this).attr("data-userid");
+                $("#deleteUserModal").find("button.btn-primary").attr("data-userid", userId);
+            });
+            $("#deleteUserModal").delegate("button.btn-primary", "click", function () {
+                var userId = $(this).attr("data-userid");
+                $.post("apiUser/deleteApiUser", {userId: userId}, function (data) {
+                    console.log(data);
+                    if (data.success) {
                         window.location.reload();
                     }
                 }, "json");
@@ -549,5 +565,33 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="deleteUserModal" tabindex="-1" role="dialog" aria-labelledby="deleteUserModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="deleteUserModalLabel">
+                    删除提示
+                </h4>
+            </div>
+            <div class="modal-body">
+                确定删除该条用户信息吗？
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                </button>
+                <button type="button" class="btn btn-primary">
+                    提交更改
+                </button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal -->
+</div>
+
 </body>
 </html>
